Fixes gap on homepage hero

--- a/_scss/module/_home-hero.scss
+++ b/_scss/module/_home-hero.scss
@@ -25,6 +25,7 @@
 
   .subheading {
     @extend h4;
+    margin-bottom: 0;
   }
 
   .location:before {
